apply plugin: JavaLibraryPlugin

group = 'nu.mine.mosher.gedcom'

java {
    sourceCompatibility = JavaVersion.VERSION_14
}

compileJava {
    options.compilerArgs << '-parameters'
    options.compilerArgs << "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}

task copyTomcat(type: Copy) {
    from 'src/main/tomcat'
    into "${buildDir}/libs"
}

tasks.assemble.dependsOn tasks.copyTomcat

task copyNginx(type: Copy) {
    from 'src/main/nginx'
    into "${buildDir}/libs"
}

tasks.assemble.dependsOn tasks.copyNginx
